force-app/main/default/objects/Test_Result__c.object
<CustomObject>
    <description>Results of tests conducted on specific Test Scenarios.</description>
    <fields>
        <fullName>Builder_Notes__c</fullName>
        <description>Notes from the builder about test recovery or their response to the tester feedback.</description>
        <inlineHelpText>Notes from the builder about test recovery or their response to the tester feedback.</inlineHelpText>
        <label>Builder Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Test Results</relationshipLabel>
        <relationshipName>Test_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Reported</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Ready to Retest</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <label>Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Test Results</relationshipLabel>
        <relationshipName>Test_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Scenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Scenario</label>
        <referenceTo>Test_Scenario__c</referenceTo>
        <relationshipLabel>Test Results</relationshipLabel>
        <relationshipName>Test_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tester_Feedback__c</fullName>
        <description>Notes on how the results differed from what was expected, what made the test fail, and other feedback to act on.</description>
        <inlineHelpText>Notes on how the results differed from what was expected, what made the test fail, and other feedback to act on.</inlineHelpText>
        <label>Tester Feedback</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project member who is conducting the test.</description>
        <inlineHelpText>Project member who is conducting the test.</inlineHelpText>
        <label>Tester</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Member__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Member__c</referenceTo>
        <relationshipLabel>Test Results</relationshipLabel>
        <relationshipName>Test_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Tester__c</columns>
        <columns>Result__c</columns>
        <columns>Test_Scenario__c</columns>
        <columns>Story__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Test Result</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>